fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ body, html{
     text-align: left;
     overflow-y: scroll;
     width: 100%;
-    height: 95%;
+    height: 50vw;
+    max-height: 320px;
     margin: auto;
 
     border-radius: 5px;
@@ -43,7 +44,7 @@ body, html{
 
 #room{
     width: 70%;
-    height: 45%;
+    height: fit-content;
     margin: auto;
 }
 
